Fixed container for bookkeep view all being too small.

--- a/src/app/pages/bookkeep-view-all/bookkeep-view-all.component.css
+++ b/src/app/pages/bookkeep-view-all/bookkeep-view-all.component.css
@@ -9,6 +9,10 @@
     background-color: var(--primary-colour);
 }
 
+.container{
+    width: 100% !important;
+}
+
 .date-filter .form-input {
     flex-direction: row;
     margin: 0px 0px 0px var(--small-s);
